--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "inject-examples": "node scripts/injectExamples.js",
     "readme": "node examples/readme.js",
+    "sample": "node examples/sample.js",
     "test": "node scripts/test.js"
   },
   "main": "index.js",
