--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "PEG.js",
   "devDependencies": {
     "tart-tracing": "0.3.0",
-    "nodeunit": "0.8.1"
+    "nodeunit": "0.9.x"
   },
   "dependencies": {
     "tart": "0.3.0"
