--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "readme": "node examples/readme.js",
     "sample": "node examples/sample.js",
     "generate-PEG": "node examples/generatePEG.js",
-    "humus": "node examples/humus.js",
+    "humus": "node humus/humus.js",
     "test": "node scripts/test.js"
   },
   "main": "PEG.js",
@@ -27,6 +27,7 @@
     "actor",
     "PEG",
     "parsing",
+    "humus",
     "reference"
   ],
   "contributors": [
